# calc-spock

./: .editorconfig  README.md  calc-spock.cabal
app/: Main.hs
src/: Domain.hs  Web.hs
test/: ApiInteractionSpec.hs  ApiSerializationSpec.hs  Spec.hs
