name:                calc-spock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wallymathieu/calc-spock
license:             MIT
license-file:        LICENSE
author:              Oskar Gewalli
maintainer:          oskar@gewalli.se
copyright:           2022 Oskar Gewalli
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Domain
                     , Web
  other-modules:
  build-depends:       base >= 4.9 && < 5
                     , containers >= 0.5 && <0.6
                     , aeson
                     , text
                     , time
                     , bytestring
                     , Spock
                     , http-types >= 0.12
  default-language:    Haskell2010

executable calc-spock-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Spock
                     , http-types >= 0.12
                     , calc-spock
                     , aeson
                     , text
  default-language:    Haskell2010

test-suite calc-spock-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Spock
                     , calc-spock
                     , hspec
                     , hspec-wai
                     , aeson
                     , time
  other-modules:       ApiInteractionSpec
                     , ApiSerializationSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wallymathieu/calc-spock
